2010-01-25  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Timothy Hatcher.

        Instead of adding inspector methods to the inspected global objects
        use private implementation visible from inspector code only.
        https://bugs.webkit.org/show_bug.cgi?id=34089

        Test: inspector/inspected-objects-not-overriden.html

        * inspector/front-end/InjectedScript.js:
        (injectedScriptConstructor):

2010-01-25  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: don't show headers/content tabs in scripts view.

        https://bugs.webkit.org/show_bug.cgi?id=34083

        * inspector/front-end/ResourceView.js:
        (WebInspector.ResourceView):
        (WebInspector.ResourceView.prototype.set headersVisible):
        (WebInspector.ResourceView.prototype._selectContentTab):
        (WebInspector.ResourceView.prototype._innerSelectContentTab):
        * inspector/front-end/ResourcesPanel.js:
        (WebInspector.ResourcesPanel.prototype.show):
        (WebInspector.ResourcesPanel.prototype.recreateViewForResourceIfNeeded):
        (WebInspector.ResourcesPanel.prototype.showResource):
        * inspector/front-end/ScriptsPanel.js:
        (WebInspector.ScriptsPanel.prototype.show):
        (WebInspector.ScriptsPanel.prototype._showScriptOrResource):
        * inspector/front-end/inspector.css:

2010-01-25  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Reduce the size of the library when compiling for Maemo5
        https://bugs.webkit.org/show_bug.cgi?id=34050

        Exclude the Web Inspector's qrc file in the Maemo5 build, just
        like we do for the Symbian build. Saves about ~900k.

        * WebCore.pro:

2010-01-25  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.
